# CAMDM

./: README.md  pyproject.toml
CAMDM/: export_onnx.py  train.py
CAMDM/data/: make_pose_data.py  process_bvh.py
CAMDM/diffusion/: create_diffusion.py  fp16_util.py  gaussian_diffusion.py
CAMDM/network/: dataset.py  training.py
